Re-add flexbox to fix profile overflow

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -5,7 +5,7 @@
     --banner-new: #1d539f;
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
     --background-color: #121212;
     --text-color: #fff;
     --background-color-card: black;
@@ -15,27 +15,29 @@
 .profile {
     background-color: var(--banner-new) !important;
     text-align: center;
-    height: 320px;
+    padding-bottom: 10px;
     margin-bottom: 50px;
     transition: background 0.3s linear;
+    height: max-content;
     h1 {
         font-size: 50px;
         font-weight: 700;
         color: white;
     }
-    
-    img {
-        border-radius: 50%;
-        max-width: 100%;
-        max-height: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        display: inline;        
-        padding: 20px;
-    }
-    
+
     .profile-picture {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         margin-bottom: 30px;
-        height: 200px;
+        img {
+            flex: 1 0 75px;
+            max-width: 150px;
+            height: auto;
+            aspect-ratio: 1/1;
+            border-radius: 50%;
+            display: inline;
+            padding: 20px;
+        }
     }
 }
